[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "financial-ml-pipeline"
version = "0.1.0"
description = "Financial ML Pipeline with MLflow tracking"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Kavita Ganeshan", email = "email"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "mlflow>=2.10.0",
    "sqlalchemy>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["financial_ml_pipeline"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true